Change into imgBB to storage img, fix register issue

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,1 @@
-# Firebase Admin SDK configuration
-# 1. Go to your Firebase project settings > Service accounts.
-# 2. Click "Generate new private key" to download a JSON file.
-# 3. Base64-encode the contents of that JSON file. You can use an online tool or a command line utility.
-#    (e.g., `base64 -w 0 <path/to/your/serviceAccountKey.json>`)
-# 4. Paste the resulting Base64 string here.
-FIREBASE_SERVICE_ACCOUNT_BASE64=
-
-# The ID of your Firebase project (e.g., "my-cool-project")
-FIREBASE_PROJECT_ID=
+IMGBB_API_KEY=
