--- a/backend/package.json
+++ b/backend/package.json
@@ -22,19 +22,22 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.5",
-    "@nestjs/config": "^4.0.2",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^11.1.5",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.5",
     "@nestjs/swagger": "^11.2.0",
+    "@opentelemetry/api": "1.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "dotenv-cli": "^8.0.0",
     "firebase-admin": "^12.1.1",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
@@ -48,8 +51,9 @@
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.5",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
